2003-05-27  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_module): Renamed from cob_environment.
	(cob_current_module): Renamed from cob_env.
	(cob_module_enter): Renamed from cob_push_environment.
	(cob_module_leave): Renamed from cob_pop_environment.
	(cob_module_init): Removed.
	* call.c (cob_resolve): Do not call cob_module_init.

2003-05-20  Keisuke Nishida  <knishida@netlab.jp>

	* strings.c (cob_string_delimited): New function.
	(cob_string_append): Take only one argument.

2003-05-18  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (ding_on_error): Removed.

2003-05-18  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c: Large file system support.
	(_LFS64_LARGEFILE) [WITH_LFS64]: Defined.
	(_LFS64_STDIO) [WITH_LFS64]: Defined.
	(_FILE_OFFSET_BITS) [WITH_LFS64]: Defined.
	(_LARGEFILE64_SOURCE) [WITH_LFS64]: Defined.

2003-05-18  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_d2i, cob_i2d): New macros.

2003-05-15  Keisuke Nishida  <knishida@netlab.jp>

	* move.c (COPY_COMMON_REGION): Removed.
	(store_common_region): New function.
	(cob_display_to_int): New function.
	(cob_binary_to_int): New function.
	(cob_get_int): Optimized.

2003-05-13  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (INITIAL_FLAGS): Set to O_BINARY when _WIN32 is defined
	rather than __MINGW32__.
	(file_open): Open in binary mode.
	(cob_open): Make sure that errno == ENOENT after stat.

2003-05-06  Keisuke Nishida  <knishida@netlab.jp>

	* exception.def (COB_EC_ALL): Added.
	* common.h (COB_SET_EXCEPTION): New macro.
	(cob_exception_table): New variable.
	(cob_exception_id): New enum.
	(cob_exception_code): Removed.

2003-05-04  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c: Optimized cob_add_int/cob_sub_int for DISPLAY.
	(digit_table): New variable.
	(init_digit_table): New function.
	(display_add_int, display_sub_int): New functions.
	(cob_add_int_to_display): New function.
	(cob_add_int): Call `cob_add_int_to_display'.